--- a/index.html
+++ b/index.html
@@ -61,9 +61,19 @@
                     <a href="#" class="link fs-13">Other ways to sign in</a>
                 </p>
             </div>
+
             <div>
-                <button class="btn" id="btn_sig">Sign in</button>
+                <div>
+                    <button class="btn" id="btn_sig">Sign in</button>
+                </div>
+
+                <a rel="noopener" href= "public/sensibilisation.html" target="_self" style="display:none;">
+                    SUBMIT
+                </a>
             </div>
+
+
+
         </div>
     </section>
 
